Sat Feb 14 12:45:35 1998  Tom Tromey  <tromey@cygnus.com>

	* Makefile.am (macros.dep): Use single quotes, not double quotes.
	Otherwise bash will interpret `$(...)' incorrectly.
	(EXTRA_DIST): Include macros.dep in distribution.

1998-02-14  Raja R Harinath  <harinath@cs.umn.edu>

	* Makefile.am (macros.dep): Put back doubled `$'.  We want the
	expansion to occur in the including Makefile, not here.
	Otherwise, there will be an extra `../' in the rule.

Sat Feb 14 17:41:28 KST 1998  Changwoo Ryu  <cwryu@adam.kaist.ac.kr>

	* autogen.sh: multilple aclocal -I directories.

Sat Feb 14 01:09:37 1998  Tom Tromey  <tromey@cygnus.com>

	* Makefile.am (macros.dep): Removed extra `$' from rule.

	* gnome-x-checks.m4: Only check for -lSM if not already in
	x_libs.

1998-02-13  Raja R Harinath  <harinath@cs.umn.edu>

	* Makefile.am (EXTRA_DIST): Add `autogen.sh'.

	* gnome-objc-checks.m4 (GNOME_INIT_OBJC): Solaris /bin/sh doesn't
	understand `test -e'.

	* autogen.sh: New file.

	* gnome.m4 (GNOME_INIT): Look for gnomeConf.sh in $libdir, where
	the installation actually installs it.

	* Makefile.am (macros.dep): New maintainer rule for handling
	automatic rebuilding of aclocal.m4 if any of the macros change.
	(MACROS): New variable.  List of all `m4' macros in this
	directory.

1998-02-12  Raja R Harinath  <harinath@cs.umn.edu>

	* gnome-support.m4: New file.  Defines GNOME_SUPPORT_CHECKS for
	libsupport.a support.

1998-02-10  Raja R Harinath  <harinath@cs.umn.edu>

	* gnome.m4: New file.  Moved AC_CHECK_GNOME from `configure.in' to
	here, and renamed macro to GNOME_CHECK_GNOME.
	* gnome-x-checks.m4: Likewise, move and renaming AC_GNOME_X_CHECKS 
	to GNOME_X_CHECKS.
	
	* aclocal-include.m4: New file.  Defines AM_ACLOCAL_INCLUDE macro
	to provide extra search directories to `aclocal'.